--- a/src/resource/views/admin/all/brand.hbs
+++ b/src/resource/views/admin/all/brand.hbs
@@ -52,4 +52,11 @@
   <span class="pagination"></span>
 </div>
 
+<script>
+  const successful = '{{successful}}'
+  const totalBrand = `{{totalBrand}}`
+  const currentPage = `{{currentPage}}`
+</script>
+<script src="/js/importLinkCss.js" defer></script>
+<script src="/js/pagination.js" defer></script>
 <script src="/js/admin/all/brand.js" defer></script>
