--- a/src/resource/views/admin/all/customer.hbs
+++ b/src/resource/views/admin/all/customer.hbs
@@ -49,4 +49,11 @@
   <span class="pagination"></span>
 </div>
 
+<script>
+  const successful = '{{successful}}'
+  const totalCustomer = `{{totalCustomer}}`
+  const currentPage = `{{currentPage}}`
+</script>
+<script src="/js/importLinkCss.js" defer></script>
+<script src="/js/pagination.js" defer></script>
 <script src="/js/admin/all/customer.js" defer></script>
