--- a/src/resource/views/admin/all/order.hbs
+++ b/src/resource/views/admin/all/order.hbs
@@ -50,4 +50,11 @@
   <span class="pagination"></span>
 </div>
 
+<script>
+  const successful = '{{successful}}'
+  const totalOrder = `{{totalOrder}}`
+  const currentPage = `{{currentPage}}`
+</script>
+<script src="/js/importLinkCss.js" defer></script>
+<script src="/js/pagination.js" defer></script>
 <script src="/js/admin/all/order.js" defer></script>
