--- a/src/resource/views/admin/all/store.hbs
+++ b/src/resource/views/admin/all/store.hbs
@@ -44,8 +44,14 @@
     </table>
   </div>
 
-  <span class="pagination">
-  </span>
+  <span class="pagination"></span>
 </div>
 
+<script>
+  const successful = '{{successful}}'
+  const totalStore = `{{totalStore}}`
+  const currentPage = `{{currentPage}}`
+</script>
+<script src="/js/importLinkCss.js" defer></script>
+<script src="/js/pagination.js" defer></script>
 <script src="/js/admin/all/store.js" defer></script>
