--- a/src/resource/views/admin/all/trash.hbs
+++ b/src/resource/views/admin/all/trash.hbs
@@ -70,4 +70,11 @@
 <form style="display: none" name="delete-form" method="post"></form>
 <form style="display: none" name="restore-form" method="get"></form>
 
+<script>
+  const successful = '{{successful}}'
+  const totalDeletedProduct = `{{totalDeletedProduct}}`
+  const currentPage = `{{currentPage}}`
+</script>
+<script src="/js/importLinkCss.js" defer></script>
+<script src="/js/pagination.js" defer></script>
 <script src="/js/admin/all/trash.js" defer></script>
