--- a/src/resource/views/admin/create/employee.hbs
+++ b/src/resource/views/admin/create/employee.hbs
@@ -65,5 +65,6 @@
   </form>
 </div>
 
+<script src="/js/importLinkCss.js" defer></script>
 <script src="/js/checkInput.js" defer></script>
 <script src="/js/admin/create/employee.js" defer></script>
