--- a/src/resource/views/admin/create/store.hbs
+++ b/src/resource/views/admin/create/store.hbs
@@ -28,5 +28,6 @@
   </form>
 </div>
 
+<script src="/js/importLinkCss.js" defer></script>
 <script src="/js/checkInput.js" defer></script>
 <script src="/js/admin/create/store.js" defer></script>
