--- a/src/resource/views/admin/detail/employee.hbs
+++ b/src/resource/views/admin/detail/employee.hbs
@@ -38,4 +38,5 @@
   </form>
 </div>
 
+<script src="/js/importLinkCss.js" defer></script>
 <script src="/js/admin/detail/employee.js" defer></script>
