--- a/src/resource/views/admin/detail/order.hbs
+++ b/src/resource/views/admin/detail/order.hbs
@@ -82,4 +82,5 @@
 <script defer>
   var orderStatus = `{{order.status}}`
 </script>
+<script src="/js/importLinkCss.js" defer></script>
 <script src="/js/admin/detail/order.js" defer></script>
