--- a/src/resource/views/admin/detail/product.hbs
+++ b/src/resource/views/admin/detail/product.hbs
@@ -147,4 +147,5 @@
   var productSkincare    = `{{product.skincare}}`
   var productMakeup      = `{{product.makeup}}`
 </script>
+<script src="/js/importLinkCss.js" defer></script>
 <script src="/js/admin/detail/product.js" defer></script>
