--- a/src/resource/views/admin/detail/profile.hbs
+++ b/src/resource/views/admin/detail/profile.hbs
@@ -77,4 +77,5 @@
 <script defer>
   var userGender = `{{userInfo.userInfo.gender}}`
 </script>
+<script src="/js/importLinkCss.js" defer></script>
 <script src="/js/admin/profile.js" defer></script>  
