--- a/src/resource/views/admin/home.hbs
+++ b/src/resource/views/admin/home.hbs
@@ -38,7 +38,7 @@
     <div class="order-info">
       <table>
         <thead>
-          <tr><td colspan="3">QUẢN LÝ XUẤT HÀNG</td></tr>
+          <tr><td colspan="3">QUẢN LÝ BÁN HÀNG</td></tr>
         </thead>
         <tbody>
           <tr>
@@ -172,4 +172,5 @@
   </div>
 </div>
 
+<script src="/js/importLinkCss.js" defer></script>
 <script src="/js/admin/home.js" defer></script>
