--- a/src/resource/views/admin/signIn.hbs
+++ b/src/resource/views/admin/signIn.hbs
@@ -31,5 +31,6 @@
 <script defer>
   var error = `{{error}}`
 </script>
+<script src="/js/importLinkCss.js" defer></script>
 <script src="/js/checkInput.js" defer></script>
 <script src="/js/admin/signIn.js" defer></script>
