--- a/src/resource/views/layouts/admin.hbs
+++ b/src/resource/views/layouts/admin.hbs
@@ -5,36 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="google-site-verification" content="I6NmnMAS5Resm_EUWaaHtPiaXpCoJyPcG77zdvu1hNo" />
   <link rel="icon" type="image/svg+xml" href="https://res.cloudinary.com/bunny-store/image/upload/v1730101524/web-img/image_fdrqpl.png" />
-  <link rel="stylesheet" href="/css/admin/allBrands.css" media="print" onload="this.media='all'">
-  <link rel="stylesheet" href="/css/admin/allChats.css" media="print" onload="this.media='all'">
-  <link rel="stylesheet" href="/css/admin/allCustomers.css" media="print" onload="this.media='all'">
-  <link rel="stylesheet" href="/css/admin/allEmployees.css" media="print" onload="this.media='all'">
-  <link rel="stylesheet" href="/css/admin/allOrders.css" media="print" onload="this.media='all'">
-  <link rel="stylesheet" href="/css/admin/allProducts.css" media="print" onload="this.media='all'">
-  <link rel="stylesheet" href="/css/admin/allPurchases.css" media="print" onload="this.media='all'">
-  <link rel="stylesheet" href="/css/admin/allStores.css" media="print" onload="this.media='all'">
-  <link rel="stylesheet" href="/css/admin/allSuppliers.css" media="print" onload="this.media='all'">
   <link rel="stylesheet" href="/css/admin/body.css">
-  <link rel="stylesheet" href="/css/admin/createBrand.css" media="print" onload="this.media='all'">
-  <link rel="stylesheet" href="/css/admin/createCustomer.css" media="print" onload="this.media='all'">
-  <link rel="stylesheet" href="/css/admin/createEmployee.css" media="print" onload="this.media='all'">
-  <link rel="stylesheet" href="/css/admin/createOrder.css" media="print" onload="this.media='all'">
-  <link rel="stylesheet" href="/css/admin/createProduct.css" media="print" onload="this.media='all'">
-  <link rel="stylesheet" href="/css/admin/createPurchase.css" media="print" onload="this.media='all'">
-  <link rel="stylesheet" href="/css/admin/createStore.css" media="print" onload="this.media='all'">
-  <link rel="stylesheet" href="/css/admin/createSupplier.css" media="print" onload="this.media='all'">
-  <link rel="stylesheet" href="/css/admin/detailBrand.css" media="print" onload="this.media='all'">
-  <link rel="stylesheet" href="/css/admin/detailCustomer.css" media="print" onload="this.media='all'">
-  <link rel="stylesheet" href="/css/admin/detailEmployee.css" media="print" onload="this.media='all'">
-  <link rel="stylesheet" href="/css/admin/detailOrder.css" media="print" onload="this.media='all'">
-  <link rel="stylesheet" href="/css/admin/detailProduct.css" media="print" onload="this.media='all'">
-  <link rel="stylesheet" href="/css/admin/detailPurchase.css" media="print" onload="this.media='all'">
-  <link rel="stylesheet" href="/css/admin/detailStore.css" media="print" onload="this.media='all'">
-  <link rel="stylesheet" href="/css/admin/detailSupplier.css" media="print" onload="this.media='all'">
-  <link rel="stylesheet" href="/css/admin/home.css" media="print" onload="this.media='all'">
-  <link rel="stylesheet" href="/css/admin/profile.css" media="print" onload="this.media='all'">
   <link rel="stylesheet" href="/css/admin/sidebar.css">
-  <link rel="stylesheet" href="/css/admin/trash.css" media="print" onload="this.media='all'">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
@@ -52,4 +24,5 @@
 
 <script src="https://unpkg.com/popper.js@1"></script>
 <script src="https://unpkg.com/tippy.js@5"></script>
+<script src="/js/importLinkCss.js" defer></script>
 <script src="/js/layouts/admin.js" defer></script>
