--- a/src/resource/views/users/allOrders.hbs
+++ b/src/resource/views/users/allOrders.hbs
@@ -82,4 +82,5 @@
   var newOrderId = `{{newOrderId}}`
   var userId     = `{{userId}}`
 </script>
+<script src="/js/importLinkCss.js" defer></script>
 <script src="/js/user/allOrders.js" defer></script>
