--- a/src/resource/views/users/allProducts.hbs
+++ b/src/resource/views/users/allProducts.hbs
@@ -48,4 +48,5 @@
   var sortedColumn  = `{{sortedColumn}}`
   var sort          = `{{sort}}`
 </script>
+<script src="/js/importLinkCss.js" defer></script>
 <script src="/js/user/allProducts.js" defer></script>
