--- a/src/resource/views/users/detailBrand.hbs
+++ b/src/resource/views/users/detailBrand.hbs
@@ -40,4 +40,5 @@
 <script defer>
   brandDetails = `{{brandInfo.details}}`
 </script>
+<script src="/js/importLinkCss.js" defer></script>
 <script src="/js/user/detailBrand.js" defer></script>
