--- a/src/resource/views/users/detailProduct.hbs
+++ b/src/resource/views/users/detailProduct.hbs
@@ -92,4 +92,5 @@
   var productPrice    = `{{newProduct.price}}`
   var productImage    = `{{newProduct.img.path}}`
 </script>
+<script src="/js/importLinkCss.js" defer></script>
 <script src="/js/user/detailProduct.js" defer></script>
