--- a/src/resource/views/users/introduce.hbs
+++ b/src/resource/views/users/introduce.hbs
@@ -33,4 +33,5 @@
     <h5> Hãy đến với BunnyStore để cùng Ly khám phá thế giới mỹ phẩm đầy màu sắc và biến hóa bản thân trở nên xinh đẹp, rạng rỡ hơn mỗi ngày nha ! </h5>
 </div>
 
+<script src="/js/importLinkCss.js" defer></script>
 <script src="/js/user/introduce.js" defer></script>
