--- a/src/resource/views/users/profile.hbs
+++ b/src/resource/views/users/profile.hbs
@@ -29,4 +29,5 @@
     <div class="content"></div>
 </div>   
 
+<script src="/js/importLinkCss.js" defer></script>
 <script src="/js/user/profile.js" defer></script>
