--- a/src/resource/views/admin/all/supplier.hbs
+++ b/src/resource/views/admin/all/supplier.hbs
@@ -47,4 +47,11 @@
   <span class="pagination"></span>
 </div>
 
+<script>
+  const successful = '{{successful}}'
+  const totalSupplier = `{{totalSupplier}}`
+  const currentPage = `{{currentPage}}`
+</script>
+<script src="/js/importLinkCss.js" defer></script>
+<script src="/js/pagination.js" defer></script>
 <script src="/js/admin/all/supplier.js" defer></script>
