--- a/src/resource/views/admin/create/brand.hbs
+++ b/src/resource/views/admin/create/brand.hbs
@@ -33,5 +33,6 @@
   </form>
 </div>
 
+<script src="/js/importLinkCss.js" defer></script>
 <script src="/js/checkInput.js" defer></script>
 <script src="/js/admin/create/brand.js" defer></script>
