--- a/src/resource/views/admin/create/customer.hbs
+++ b/src/resource/views/admin/create/customer.hbs
@@ -46,5 +46,6 @@
   </form>
 </div>
 
+<script src="/js/importLinkCss.js" defer></script>
 <script src="/js/checkInput.js" defer></script>
 <script src="/js/admin/create/customer.js" defer></script>
