--- a/src/resource/views/admin/detail/supplier.hbs
+++ b/src/resource/views/admin/detail/supplier.hbs
@@ -58,4 +58,5 @@
   </form>
 </div>
 
+<script src="/js/importLinkCss.js" defer></script>
 <script src="/js/admin/detail/supplier.js" defer></script>
