--- a/src/resource/views/users/home.hbs
+++ b/src/resource/views/users/home.hbs
@@ -90,9 +90,7 @@
   <div class="title" data-tippy-content="Xem toàn bộ thương hiệu">
     <i class="fi fi-sr-flame"></i>
     <h1 style="font-size: 32px; margin-block-start: 0px; margin-block-end: 0px;">
-      <a href="/all-brands" class="main-title">
-        <b>THƯƠNG HIỆU NỔI BẬT</b>
-      </a>
+      <a href="/all-brands" class="main-title"><b>THƯƠNG HIỆU NỔI BẬT</b></a>
     </h1>
   </div>
 
@@ -100,9 +98,7 @@
     <div class="inner">
       {{#each brands}}
       <div class="brand" data-tippy-content="{{this.name}}">
-        <a href="/all-brands/brand/{{this._id}}">
-          {{this.name}}
-        </a>
+        <a href="/all-brands/brand/{{this._id}}">{{this.name}}</a>
       </div>
       {{/each}}
     </div>
@@ -110,4 +106,5 @@
   </div>
 </div>
 
+<script src="/js/importLinkCss.js" defer></script>
 <script src="/js/user/home.js" defer></script>
