--- a/src/resource/views/users/signIn.hbs
+++ b/src/resource/views/users/signIn.hbs
@@ -37,5 +37,6 @@
 <script defer>
   var error = `{{error}}`
 </script>
+<script src="/js/importLinkCss.js" defer></script>
 <script src="/js/checkInput.js" defer></script>
 <script src="/js/user/signIn.js" defer></script>
