--- a/src/resource/views/users/signUp.hbs
+++ b/src/resource/views/users/signUp.hbs
@@ -45,5 +45,6 @@
 <script defer>
   var error = `{{error}}`
 </script>
+<script src="/js/importLinkCss.js" defer></script>
 <script src="/js/checkInput.js" defer></script>
 <script src="/js/user/signUp.js" defer></script>
