--- a/src/resource/views/admin/create/purchase.hbs
+++ b/src/resource/views/admin/create/purchase.hbs
@@ -66,9 +66,7 @@
       </tfoot>
     </table>  
 
-    <div class="submit-button">
-      <button title="submit" type="submit">Hoàn thành</button>
-    </div>
+    <div class="submit-button"><button title="submit" type="submit">Hoàn thành</button></div>
   </form>
 </div>
 
