--- a/src/resource/views/admin/create/supplier.hbs
+++ b/src/resource/views/admin/create/supplier.hbs
@@ -28,9 +28,7 @@
       <span class="form-message"></span>
     </div>
 
-    <div class="submit-button">
-      <button title="submit" type="submit">Hoàn thành</button>
-    </div>
+    <div class="submit-button"><button title="submit" type="submit">Hoàn thành</button></div>
   </form>
 </div>
 
