--- a/src/resource/views/admin/create/customer.hbs
+++ b/src/resource/views/admin/create/customer.hbs
@@ -40,9 +40,7 @@
       <span class="form-message"></span>
     </div>
 
-    <div class="submit-button">
-      <button title="submit" type="submit">Hoàn thành</button>
-    </div>
+    <div class="submit-button"><button title="submit" type="submit">Hoàn thành</button></div>
   </form>
 </div>
 
