--- a/src/resource/views/users/allProducts.hbs
+++ b/src/resource/views/users/allProducts.hbs
@@ -18,7 +18,7 @@
 
   <div class="all-products">
     {{#each products}}
-    <a href="/all-products/product/{{this.slug}}">
+    <a href="/all-products/product/{{this._id}}">
       <div class="product">
         <img src="{{this.img.path}}" alt="{{this.name}}" id="product-1" loading="lazy">
         <del><p id="product-old-price">{{formatNumber this.oldPrice}}</p></del>
@@ -37,8 +37,7 @@
     {{/each}}
   </div>
 
-  <span class="pagination">
-  </span>
+  <span class="pagination"></span>
 </div>
 
 <script defer>
