--- a/src/resource/views/users/home.hbs
+++ b/src/resource/views/users/home.hbs
@@ -8,10 +8,10 @@
   
   <div class="products">
     {{#each (checkStatus products 'flash-sale' 5)}}
-      <a href="/all-products/product/{{this.slug}}">
+      <a href="/all-products/product/{{this._id}}">
         <div class="product" data-tippy-content="{{this.name}}">
           <img src="{{this.img.path}}" alt="{{this.img.name}}" id="product-1" loading="lazy">
-          <del style="color: black;"><p id="product-old-price">{{formatNumber this.oldPrice}}</p></del>
+          <del style="color: black;"><p>{{formatNumber this.oldPrice}}</p></del>
           <p id="product-price">{{formatNumber this.price}}</p>
           <p id="product-details">{{this.name}}</p>
           <p id="product-rate">
@@ -38,7 +38,7 @@
   
   <div class="products">
     {{#each (checkStatus products 'hot' 5)}}
-      <a href="/all-products/product/{{this.slug}}">
+      <a href="/all-products/product/{{this._id}}">
         <div class="product" data-tippy-content="{{this.name}}">
           <img src="{{this.img.path}}" alt="{{this.img.name}}" id="product-1" loading="lazy">
           <p id="product-price">{{formatNumber this.price}}</p>
@@ -67,7 +67,7 @@
 
   <div class="products">
     {{#each (limit products 5)}}
-      <a href="/all-products/product/{{this.slug}}">
+      <a href="/all-products/product/{{this._id}}">
         <div class="product" data-tippy-content="{{this.name}}">
           <img src="{{this.img.path}}" alt="{{this.img.name}}" id="product-1" loading="lazy">
           <p id="product-price">{{formatNumber this.price}}</p>
