--- a/src/resource/views/admin/create/supplier.hbs
+++ b/src/resource/views/admin/create/supplier.hbs
@@ -32,6 +32,5 @@
   </form>
 </div>
 
-<script src="/js/importLinkCss.js" defer></script>
-<script src="/js/checkInput.js" defer></script>
+<script src="/js/utils.js" async></script>
 <script src="/js/admin/create/supplier.js" defer></script>
