--- a/src/resource/views/admin/detail/supplier.hbs
+++ b/src/resource/views/admin/detail/supplier.hbs
@@ -10,19 +10,19 @@
       </tr>
       <tr>
         <td>Tên Nhà Cung Cấp</td>
-        <td>{{supplierInfo.name}}</td>
+        <td><input type="text" id="name" name="name" value="{{supplierInfo.name}}"></td>
       </tr>
       <tr>
         <td>Email</td>
-        <td>{{supplierInfo.email}}</td>
+        <td><input type="text" id="email" name="email" value="{{supplierInfo.email}}"></td>
       </tr>
       <tr>
         <td>SĐT</td>
-        <td>{{supplierInfo.phone}}</td>
+        <td><input type="text" id="phone" name="phone" value="{{supplierInfo.phone}}"></td>
       </tr>
       <tr>
         <td>Địa Chỉ</td>
-        <td>{{supplierInfo.address}}</td>
+        <td><input type="text" id="address" name="address" value="{{supplierInfo.address}}"></td>
       </tr>
       <tr>
         <td>Tổng chi phí</td>
