--- a/src/resource/views/admin/create/employee.hbs
+++ b/src/resource/views/admin/create/employee.hbs
@@ -63,6 +63,5 @@
   </form>
 </div>
 
-<script src="/js/importLinkCss.js" defer></script>
-<script src="/js/checkInput.js" defer></script>
+<script src="/js/utils.js" async></script>
 <script src="/js/admin/create/employee.js" defer></script>
