--- a/src/resource/views/admin/create/order.hbs
+++ b/src/resource/views/admin/create/order.hbs
@@ -72,6 +72,5 @@
   </form>
 </div>
 
-<script src="/js/importLinkCss.js" defer></script>
-<script src="/js/checkInput.js" defer></script>
+<script src="/js/utils.js" async></script>
 <script src="/js/admin/create/order.js" defer></script>
