--- a/src/resource/views/admin/create/product.hbs
+++ b/src/resource/views/admin/create/product.hbs
@@ -109,6 +109,5 @@
   </form>
 </div>
 
-<script src="/js/importLinkCss.js" defer></script>
-<script src="/js/checkInput.js" defer></script>
+<script src="/js/utils.js" async></script>
 <script src="/js/admin/create/product.js" defer></script>
