--- a/src/resource/views/admin/detail/store.hbs
+++ b/src/resource/views/admin/detail/store.hbs
@@ -5,20 +5,20 @@
         <tr><td colspan="2">THÔNG TIN CỬA HÀNG</td></tr>
       </thead>
       <tr>
-        <td>ID Cửa hàng</td>
+        <td>Mã Cửa hàng</td>
         <td>{{storeInfo._id}}</td>
       </tr>
       <tr>
         <td>Tên cửa hàng</td>
-        <td>{{storeInfo.name}}</td>
+        <td><input type="text" id="name" name="name" value="{{storeInfo.name}}"></td>
       </tr>
       <tr>
         <td>Địa chỉ cửa hàng</td>
-        <td>{{storeInfo.address}}</td>
+        <td><input type="text" id="address" name="address" value="{{storeInfo.address}}"></td>
       </tr>
       <tr>
         <td>Mô tả chi tiết</td>
-        <td>{{storeInfo.details}}</td>
+        <td><input type="text" id="details" name="details" value="{{storeInfo.details}}"></td>
       </tr>
       <tr>
         <td>Doanh thu cửa hàng</td>
