--- a/src/resource/views/admin/create/employee.hbs
+++ b/src/resource/views/admin/create/employee.hbs
@@ -9,6 +9,7 @@
       <select name="role">
         <option value="">-- Chọn vị trí --</option>
         <option value="employee">Nhân viên</option>
+        <option value="manager">Quản lý</option>
         <option value="admin">Quản trị viên</option>
       </select>
     </div>
@@ -63,5 +64,4 @@
   </form>
 </div>
 
-<script src="/js/utils.js" async></script>
 <script src="/js/admin/create/employee.js" defer></script>
