--- a/src/resource/views/admin/detail/employee.hbs
+++ b/src/resource/views/admin/detail/employee.hbs
@@ -60,6 +60,6 @@
   var role    = '{{employeeInfo.loginInfo.role}}'
   var gender  = '{{employeeInfo.userInfo.gender}}'
   var storeId = '{{employeeInfo.userInfo.storeId}}'
+  var successful = '{{successful}}'
 </script>
-<script src="/js/importLinkCss.js" defer></script>
 <script src="/js/admin/detail/employee.js" defer></script>
