--- a/src/resource/views/admin/detail/purchase.hbs
+++ b/src/resource/views/admin/detail/purchase.hbs
@@ -62,5 +62,7 @@
   </form>
 </div>
 
-<script src="/js/importLinkCss.js" defer></script>
+<script>
+  var successful = '{{successful}}'
+</script>
 <script src="/js/admin/detail/purchase.js" defer></script>
