--- a/src/resource/views/admin/home.hbs
+++ b/src/resource/views/admin/home.hbs
@@ -172,5 +172,7 @@
   </div>
 </div>
 
-<script src="/js/importLinkCss.js" defer></script>
+<script>
+  var successful = '{{successful}}'
+</script>
 <script src="/js/admin/home.js" defer></script>
