--- a/src/public/css/admin/body.css
+++ b/src/public/css/admin/body.css
@@ -41,6 +41,43 @@ body::-webkit-scrollbar {display: none}
   border-radius: 50%;
   animation: 1s reloader infinite linear;
 }
+input[type="text"], input[type="password"], input[type="date"] {
+  font-family: 'Roboto', sans-serif;
+  width: 100%;
+  text-indent: 10px;
+  height: 40px;
+  border-radius: 5px;
+  border: 1px solid #D1A6A6
+}
+input:focus {
+  outline: 1.5px solid #D1A6A6
+}
+select, option {
+  width: fit-content;
+  height: 40px;
+  border: 1px solid #D1A6A6;
+  border-radius: 5px;
+  padding-left: 5px;
+  cursor: pointer;
+}
+select:focus {
+  outline: 1.5px solid #D1A6A6
+}
+button {
+  width: fit-content; 
+  height: 30px;
+  background-color: white;
+  color: #D1A6A6;
+  border: 1px solid #D1A6A6;
+  border-radius: 5px;
+  cursor: pointer;
+}
+button:hover {
+  background-color: #D1A6A6;
+  color: white;
+}
+
+/* all items page */
 .board-title {
   width: 100%;
   display: flex;
@@ -80,43 +117,6 @@ body::-webkit-scrollbar {display: none}
       margin-block-end: 0;
     }
   } 
-}
-input[type="text"], input[type="password"], input[type="date"] {
-  font-family: 'Roboto', sans-serif;
-  width: 100%;
-  text-indent: 10px;
-  height: 40px;
-  border-radius: 5px;
-  border: 1px solid #D1A6A6
-}
-input:focus {
-  outline: 1.5px solid #D1A6A6
-}
-button {
-  width: fit-content; 
-  height: 30px;
-  background-color: white;
-  color: #D1A6A6;
-  border: 1px solid #D1A6A6;
-  border-radius: 5px;
-  cursor: pointer;
-}
-button:hover {
-  background-color: #D1A6A6;
-  color: white;
-}
-
-/* all items page */
-select, option {
-  width: fit-content;
-  height: 40px;
-  border: 1px solid #D1A6A6;
-  border-radius: 5px;
-  padding-left: 5px;
-  cursor: pointer;
-}
-select:focus {
-  outline: 1.5px solid #D1A6A6
 }
 table {
   width: 100%;
@@ -301,6 +301,34 @@ div.submit-button {
   }
 }
 
+div.notification {
+  position: fixed;
+  opacity: 0;
+  left: 50%;
+  height: 50px;
+  width: 300px;
+  z-index: 9999;
+  background-color: white;
+  color: #567A0D;
+  border-radius: 10px;
+  border: 1px solid #D1A6A6;
+  box-sizing: border-box;
+  padding: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  animation-name: notification;
+  animation-duration: 3s;
+  animation-timing-function: linear
+}
+
+@keyframes notification {
+  0%    {opacity: 0; top: 0}
+  25%   {opacity: 1; top: 5%}
+  50%   {opacity: 1; top: 5%}
+  75%   {opacity: 1; top: 5%}
+  100%  {opacity: 0; top: 0}
+}
 @keyframes reloader {
   to { transform: rotate(360deg); }
 }
