--- a/src/resource/views/admin/all/customer.hbs
+++ b/src/resource/views/admin/all/customer.hbs
@@ -31,14 +31,14 @@
       </thead>
 
       <tbody>
-        {{#each customersWithOrders}}
+        {{#each customers}}
           <tr>
             <td>{{addIndex @index 1}}</td>
             <td>{{this._id}}</td>
             <td>{{this.userInfo.name}}</td>
             <td>{{this.userInfo.address}}</td>
-            <td>{{this.totalOrder}}</td>
-            <td>{{formatNumber this.totalPrice}}</td>
+            <td>{{this.quantity}}</td>
+            <td>{{formatNumber this.revenue}}</td>
             <td><a href="/admin/all-customers/customer/{{this._id}}">Xem</a></td>
           </tr>
           {{/each}}
@@ -54,6 +54,4 @@
   const totalCustomer = `{{totalCustomer}}`
   const currentPage = `{{currentPage}}`
 </script>
-<script src="/js/importLinkCss.js" defer></script>
-<script src="/js/pagination.js" defer></script>
 <script src="/js/admin/all/customer.js" defer></script>
