--- a/src/resource/views/admin/detail/profile.hbs
+++ b/src/resource/views/admin/detail/profile.hbs
@@ -33,8 +33,8 @@
   </form>
 </div>   
 
-<script defer>
+<script>
   var gender = `{{userInfo.userInfo.gender}}`
+  var successful = '{{successful}}'
 </script>
-<script src="/js/importLinkCss.js" defer></script>
 <script src="/js/admin/profile.js" defer></script>  
