--- a/src/resource/views/admin/signIn.hbs
+++ b/src/resource/views/admin/signIn.hbs
@@ -28,9 +28,7 @@
   </div>
 </div>
 
-<script defer>
+<script>
   var error = `{{error}}`
 </script>
-<script src="/js/importLinkCss.js" defer></script>
-<script src="/js/checkInput.js" defer></script>
 <script src="/js/admin/signIn.js" defer></script>
