--- a/src/resource/views/layouts/admin.hbs
+++ b/src/resource/views/layouts/admin.hbs
@@ -10,6 +10,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+  <script src="/js/utils.js" async></script>
   <title>{{title}}</title>
 </head>
 <body>
@@ -24,5 +25,4 @@
 
 <script src="https://unpkg.com/popper.js@1"></script>
 <script src="https://unpkg.com/tippy.js@5"></script>
-<script src="/js/importLinkCss.js" defer></script>
 <script src="/js/layouts/admin.js" defer></script>
